@@ -1,13 +1,13 @@
 package br.gov.es.siscap.service;
 
-import br.gov.es.siscap.dto.MicrorregiaoSelectDto;
+import br.gov.es.siscap.dto.SelectDto;
 import br.gov.es.siscap.repository.MicrorregiaoRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +20,7 @@ public class MicrorregiaoService {
         return repository.existsById(id);
     }
 
-    public List<MicrorregiaoSelectDto> buscarSelect() {
-        return repository.findAll().stream().map(MicrorregiaoSelectDto::new).collect(Collectors.toList());
+    public List<SelectDto> buscarSelect() {
+        return repository.findAll(Sort.by(Sort.Direction.ASC, "nome")).stream().map(SelectDto::new).toList();
     }
 }
